name:                language-python
version:             0.5.4
cabal-version:       >= 1.6
synopsis:            Parsing and pretty printing of Python code. 
description:         language-python is a Haskell library for lexical analysis, parsing 
                     and pretty printing Python code. It supports versions 2.x and 3.x of Python. 
category:            Language
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2008-2016 Bernard James Pope
author:              Bernard James Pope (Bernie Pope)
maintainer:          florbitous@gmail.com
homepage:            http://github.com/bjpop/language-python 
build-type:          Simple
stability:           experimental
extra-source-files:  src/Language/Python/Version3/Parser/Parser.y 
                     src/Language/Python/Version3/Parser/Lexer.x 
                     src/Language/Python/Version2/Parser/Parser.y 
                     src/Language/Python/Version2/Parser/Lexer.x 

flag noparser
  description: disable the parser component
  default: False


source-repository head
   type: git
   location: https://github.com/bjpop/language-python

Library
   hs-source-dirs: src 
   ghc-options: -fwarn-incomplete-patterns -fwarn-unused-imports -fwarn-warnings-deprecations
   build-depends:
      base == 4.*,
      pretty == 1.1.*,
      monads-tf == 0.1.*
   build-tools: happy, alex
   exposed-modules:
     Language.Python.Common
     Language.Python.Common.SrcLocation
     Language.Python.Common.Pretty
     Language.Python.Common.Token
     Language.Python.Common.PrettyToken
     Language.Python.Common.AST
     Language.Python.Common.PrettyAST
     Language.Python.Common.PrettyParseError
     Language.Python.Common.StringEscape
     Language.Python.Common.ParseError
   if !flag(noparser)
     build-depends:
       containers == 0.5.*,
       array >= 0.4 && < 0.6,
       transformers >= 0.3 && < 0.6,
       utf8-string >= 1 && < 2
     exposed-modules:
       Language.Python.Common.ParserMonad
       Language.Python.Version3
       Language.Python.Version3.Parser
       Language.Python.Version3.Lexer
       Language.Python.Version2
       Language.Python.Version2.Parser
       Language.Python.Version2.Lexer
     other-modules:
       Language.Python.Common.ParserUtils
       Language.Python.Common.LexerUtils
       Language.Python.Version3.Parser.Parser
       Language.Python.Version3.Parser.Lexer
       Language.Python.Version2.Parser.Parser
       Language.Python.Version2.Parser.Lexer
